--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,16 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
+*.bas       text    eol=crlf
+*.cls       text    eol=crlf
+*.frm       text    eol=crlf
+*.frx       text    eol=crlf
+*.dcm       text    eol=crlf
+*.vbaproj   text    eol=crlf
+
+*.wsf       text    eol=crlf
+*.bat       text    eol=crlf
+
 # Custom for Visual Studio
 *.cs     diff=csharp
 
